--- a/k8s/octopetshop-database-secrets.yaml
+++ b/k8s/octopetshop-database-secrets.yaml
@@ -4,5 +4,5 @@ metadata:
   name: database-credentials
 type: Opaque
 stringData:
-  sa-password: "ReplaceThisWithYourPassword"
-  connectionstring: "Data Source=octopetshop-sqlserver-cluster-ip-service;Initial Catalog=OctoPetShop; User ID=sa; Password=ReplaceThisWithYourPassword"
+  sa-password: "IS7egohDohxai7ahfooweiy.ahl1shei"
+  connectionstring: "Data Source=octopetshop-sqlserver-cluster-ip-service;Initial Catalog=OctoPetShop; User ID=sa; Password=IS7egohDohxai7ahfooweiy.ahl1shei"
