--- a/k8s/octopetshop-loadbalancer.yaml
+++ b/k8s/octopetshop-loadbalancer.yaml
@@ -6,10 +6,12 @@ spec:
   selector:
     component: web
   ports:
-    - port: 5000
+    - nodePort: 30445
+      port: 5000
       targetPort: 5000
       name: http-port
-    - port: 5001
+    - nodePort: 30446
+      port: 5001
       targetPort: 5001
       name: https-port
   type: NodePort
